<resources>
    <string name="app_name">Parcial2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="games">Games</string>
    <string name="general_news">General News</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancelar</string>
    <string name="login">Log in</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="log_out">Log Out</string>
</resources>
