<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_general_news"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/general_news" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_games_black_24dp"
            android:title="@string/games" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_favs"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/favorites" />
        </menu>
    </item>

</menu>
